[1.0.10] refactor page transition implementation
- refactor and comment component code
- add GreenSock jQuery adaptor to implement promise with GreenSock
animation optimisations (look into retroactively updating components:
looking at you preloader!)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,6 @@
 @import "utility/variables";
 
 
-
 // # base
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -36,7 +35,6 @@
 // @import "base/styleguide";
 
 
-
 // # element
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -44,25 +42,24 @@
 @import "element/whirligig";
 
 
-
 // # component
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "component/preloader";
-
+@import "component/mast";
+@import "component/base";
 
 
 // # composition
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
+@import "composition/frame";
 
 
 // # page
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
 
