--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,6 +3,89 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+// // layout
+// 1. screen-size:
+//   s, m, l
+
+// 2. grid
+//   * generated *
+
+// 3. wrap
+//   * generated *
+
+// // typography
+// 1. type-scale:
+//   screensize modifiers: s, m, l
+//     f-1: 3
+//     f-2: 2.25
+//     f-3: 1.5
+//     f-4: 1.25
+//     f-5: 1
+//     f-6: 0.875
+
+// 2. measure
+//   screensize modifiers: s, m, l
+//     measure: 30em
+//     measure-narrow: 20em
+//     measure-wide: 34em
+
+// 3. line-height:
+//   screensize modifiers: s, m, l
+//     lh-solid: 1
+//     lh-title: 1.25
+//     lh-copy: 1.45
+
+// 4. tracking
+//   screensize modifiers: s, m, l
+//     tracked: 0.1em
+//     tracked-tight: -0.5em
+//     tracked-mega: 0.25em
+
+// 5. font-weight
+//   screensize modifiers: s, m, l
+//     fw-1: 100
+//     fw-2: 200
+//     fw-3: 300
+//     fw-4: 400
+//     fw-5: 500
+//     fw-6: 600
+//     fw-7: 700
+//     fw-8: 800
+//     fw-9: 900
+
+// 6. font-style:
+//   screensize modifiers: s, m, l
+//     fs-n: normal
+//     fs-i: italic
+
+// 7. vertical-alignment:
+//   screensize modifiers: s, m, l
+//     va-mid
+//     va-top
+//     va-btm
+
+// 8. text-alignment:
+//   screensize modifiers: s, m, l
+//     ta-lft
+//     ta-ctr
+//     ta-rgt
+
+// 9. text-transform:
+//   screensize modifiers: s, m, l
+//     tt-upr
+//     tt-lwr
+//     tt-cap
+//     tt-non
+
+// 10. text-decoration:
+//   screensize modifiers: s, m, l
+//     strike
+//     underline
+//     no-line
+
+// 11. font-family:
+//   * generated *
+
 // # dependencies
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
