--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -3,11 +3,26 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+$screen-sizes: (
+  s: 40em,
+  m: 70em,
+  l: 90em
+);
+
+$spacing: (
+  none: 0,
+  xs: 0.25em,
+  s: 0.5em,
+  m: 1em,
+  l: 2em,
+  xl: 4em,
+  xxl: 8em,
+  xxxl: 16em
+);
+
 //////////////////////////////
 // # layout
 //////////////////////////////
-$col-count: 12;
-
 $gutter: 1em;
 $gutter--m: 1.5em;
 $gutter--l: 2em;
