--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -5,10 +5,40 @@
 
 // // layout
 // 1. screen-size:
-//   s, m, l
+//   s, m, l //
 
 // 2. grid
-//   * generated *
+//   * generated * //
+
+// 3. spacing
+  // values:
+    // 0: 0
+    // 1: 0.25
+    // 2: 0.5
+    // 3: 1
+    // 4: 2
+    // 5: 4
+    // 6: 8
+    // 7: 16
+
+  // screensize modifiers: s, m, l
+  // - padding:
+  //   p-all
+  //   p-hor
+  //   p-ver
+  //   p-top
+  //   p-rgt
+  //   p-bot
+  //   p-lft
+
+  // - margin:
+  //   m-all
+  //   m-hor
+  //   m-ver
+  //   m-top
+  //   m-rgt
+  //   m-bot
+  //   m-lft
 
 // 3. wrap
 //   * generated *
@@ -86,36 +116,52 @@
 // 11. font-family:
 //   * generated *
 
+
+
+
+
+
+
+
+
 // # dependencies
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
-@import "breakpoint";
-@import "utility/mixins";
-@import "utility/font-face";
-@import "utility/variables";
+
+
+
+
+
+
+
+
+
 
 
 // # base
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
+// # dependencies
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+@import "breakpoint";
+@import "base/font-face";
+
+// # configuration
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+@import "base/variables";
+
+// # utilities
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 @import "base/reset";
 @import "base/skeleton";
-@import "base/wrap";
 @import "base/grid";
+@import "base/spacing";
 
-//////////////////////////////
-// # archetype
-//////////////////////////////
-// *
-// document
-// template styles when developing a document
-// @import "base/document";
-
-// *
-// style guide
-// template styles when developing a style guide
-// @import "base/styleguide";
 
 
 // # element
