--- a/assets/sass/base/_spacing.scss
+++ b/assets/sass/base/_spacing.scss
@@ -3,55 +3,48 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$spacing-value-list: map-values($spacing);
-@mixin spacing($prefix, $index, $spacing-type, $spacing-value, $modifier: "") {
-  .#{$prefix}-all-#{$index}#{unquote($modifier)} { #{$spacing-type}: $spacing-value; }
-  .#{$prefix}-top-#{$index}#{unquote($modifier)} { #{$spacing-type}-top: $spacing-value; }
-  .#{$prefix}-rgt-#{$index}#{unquote($modifier)} { #{$spacing-type}-right: $spacing-value; }
-  .#{$prefix}-bot-#{$index}#{unquote($modifier)} { #{$spacing-type}-bottom: $spacing-value; }
-  .#{$prefix}-lft-#{$index}#{unquote($modifier)} { #{$spacing-type}-left: $spacing-value; }
-  .#{$prefix}-hor-#{$index}#{unquote($modifier)} {
-    #{$spacing-type}-right: $spacing-value;
-    #{$spacing-type}-left: $spacing-value;
-  }
-  .#{$prefix}-ver-#{$index} {
-    #{$spacing-type}-top: $spacing-value;
-    #{$spacing-type}-bottom: $spacing-value;
-  }
-}
+@each $size, $value in $spacing-sizes {
+  $i: index($spacing-sizes, ($size $value)) - 1;
 
-// # padding
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
+  // # paddings
+  ////////////////////////////////////////////////////////////
+  ////////////////////////////////////////////////////////////
+  @include responsive-rule-set((
+    'pa-#{$i}',
+    'pv-#{$i}',
+    'ph-#{$i}',
+    'pt-#{$i}',
+    'pr-#{$i}',
+    'pb-#{$i}',
+    'pl-#{$i}'
+  ), (
+    (padding: $value),
+    (padding-top: $value, padding-bottom: $value),
+    (padding-right: $value, padding-left: $value),
+    (padding-top: $value),
+    (padding-right: $value),
+    (padding-bottom: $value),
+    (padding-left: $value)
+  ));
 
-@each $spacing-value in $spacing-value-list {
-  $i: index($spacing-value-list, $spacing-value);
-  @include spacing(p, $i, padding, $spacing-value);
-}
-
-@each $screen-size-name, $screen-size-value in $screen-sizes {
-  @include breakpoint($screen-size-value) {
-    @each $spacing-value in $spacing-value-list {
-      $i: index($spacing-value-list, $spacing-value);
-      @include spacing(p, $i, padding, $spacing-value, --$screen-size-name);
-    }
-  }
-}
-
-// # margin
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-@each $spacing-value in $spacing-value-list {
-  $i: index($spacing-value-list, $spacing-value);
-  @include spacing(m, $i, margin, $spacing-value);
-}
-
-@each $screen-size-name, $screen-size-value in $screen-sizes {
-  @include breakpoint($screen-size-value) {
-    @each $spacing-value in $spacing-value-list {
-      $i: index($spacing-value-list, $spacing-value);
-      @include spacing(m, $i, margin, $spacing-value, --$screen-size-name);
-    }
-  }
+  // # margins
+  ////////////////////////////////////////////////////////////
+  ////////////////////////////////////////////////////////////
+  @include responsive-rule-set((
+    'ma-#{$i}',
+    'mv-#{$i}',
+    'mh-#{$i}',
+    'mt-#{$i}',
+    'mr-#{$i}',
+    'mb-#{$i}',
+    'ml-#{$i}'
+  ), (
+    (margin: $value),
+    (margin-top: $value, margin-bottom: $value),
+    (margin-right: $value, margin-left: $value),
+    (margin-top: $value),
+    (margin-right: $value),
+    (margin-bottom: $value),
+    (margin-left: $value)
+  ));
 }
