--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,7 +10,7 @@
 // 2. grid
 //   * generated * //
 
-// 3. spacing
+// 3. spacing //
   // values:
     // 0: 0
     // 1: 0.25
@@ -44,20 +44,20 @@
 //   * generated *
 
 // // typography
-// 1. type-scale:
-//   screensize modifiers: s, m, l
-//     f-1: 3
-//     f-2: 2.25
-//     f-3: 1.5
-//     f-4: 1.25
-//     f-5: 1
-//     f-6: 0.875
+// 1. type-scale: //
+  //   screensize modifiers: s, m, l
+  //     f-1: 3
+  //     f-2: 2.25
+  //     f-3: 1.5
+  //     f-4: 1.25
+  //     f-5: 1
+  //     f-6: 0.875
 
-// 2. measure
-//   screensize modifiers: s, m, l
-//     measure: 30em
-//     measure-narrow: 20em
-//     measure-wide: 34em
+// 2. measure // 
+  //   screensize modifiers: s, m, l
+  //     measure: 30em
+  //     measure-narrow: 20em
+  //     measure-wide: 34em
 
 // 3. line-height:
 //   screensize modifiers: s, m, l
@@ -159,8 +159,12 @@
 ////////////////////////////////////////////////////////////
 @import "base/reset";
 @import "base/skeleton";
-@import "base/grid";
+// NEW:
+@import "base/rule-set";
+@import "base/grid"; 
 @import "base/spacing";
+@import "base/type-scale";
+@import "base/measure";
 
 
 
