[1.1.23] update base functional classes
- categorised into:
  - layout types
  - typography types

--- a/assets/sass/base/_font-style.scss
+++ b/assets/sass/base/_font-style.scss
@@ -1,14 +1,12 @@
-// # measure
+// # font style
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include responsive-rule-set((
-  'measure',
-  'measure-narrow',
-  'measure-wide',
+  'fs-normal',
+  'fs-italic',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  (font-style: normal),
+  (font-style: italic),
 ));
