--- a/assets/sass/base/_text-align.scss
+++ b/assets/sass/base/_text-align.scss
@@ -1,14 +1,14 @@
-// # measure
+// # text align
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include responsive-rule-set((
-  'measure',
-  'measure-narrow',
-  'measure-wide',
+  'ta-left',
+  'ta-center',
+  'ta-right',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  (text-align: left),
+  (text-align: center),
+  (text-align: right),
 ));
