--- a/assets/sass/base/_text-decoration.scss
+++ b/assets/sass/base/_text-decoration.scss
@@ -1,14 +1,14 @@
-// # measure
+// # text decoration
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include responsive-rule-set((
-  'measure',
-  'measure-narrow',
-  'measure-wide',
+  'td-strike',
+  'td-underline',
+  'td-none',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  (text-decoration: strike),
+  (text-decoration: underline),
+  (text-decoration: none),
 ));
