--- a/assets/sass/base/_text-transform.scss
+++ b/assets/sass/base/_text-transform.scss
@@ -1,14 +1,16 @@
-// # measure
+// # text transform
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include responsive-rule-set((
-  'measure',
-  'measure-narrow',
-  'measure-wide',
+  'tt-upper',
+  'tt-lower',
+  'tt-cap',
+  'tt-none',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  (text-transform: uppercase),
+  (text-transform: lowercase),
+  (text-transform: capitalize),
+  (text-transform: none),
 ));
