--- a/assets/sass/base/_tracking.scss
+++ b/assets/sass/base/_tracking.scss
@@ -1,14 +1,14 @@
-// # measure
+// # tracking
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include responsive-rule-set((
-  'measure',
-  'measure-narrow',
-  'measure-wide',
+  'track',
+  'track-tight',
+  'track-wide',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  (letter-spacing: map-get($trackings, track)),
+  (letter-spacing: map-get($trackings, tight)),
+  (letter-spacing: map-get($trackings, wide)),
 ));
