--- a/assets/sass/composition/_frame.scss
+++ b/assets/sass/composition/_frame.scss
@@ -2,6 +2,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
 .frame {
   position: relative;
   z-index: 1000;
@@ -37,15 +38,15 @@
 .frame__mast-wrap {
   position: relative;
   z-index: 1230;
-  margin-bottom: $gutter;
+  // margin-bottom: $gutter;
 
-  @include breakpoint($screen--m) {
-    margin-bottom: $gutter--m;
-  }
+  // @include breakpoint($screen--m) {
+  //   margin-bottom: $gutter--m;
+  // }
 
-  @include breakpoint($screen--l) {
-    margin-bottom: $gutter--l;
-  }
+  // @include breakpoint($screen--l) {
+  //   margin-bottom: $gutter--l;
+  // }
 }
 
 //////////////////////////////
@@ -65,13 +66,13 @@
 // # base
 //////////////////////////////
 .frame__base-wrap {
-  margin-top: $gutter;
+  // margin-top: $gutter;
 
-  @include breakpoint($screen--m) {
-    margin-top: $gutter--m;
-  }
+  // @include breakpoint($screen--m) {
+  //   margin-top: $gutter--m;
+  // }
 
-  @include breakpoint($screen--l) {
-    margin-top: $gutter--l;
-  }
+  // @include breakpoint($screen--l) {
+  //   margin-top: $gutter--l;
+  // }
 }
