--- a/assets/sass/base/_font-family.scss
+++ b/assets/sass/base/_font-family.scss
@@ -2,3 +2,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.helvetica {
+  font-family: 'helvetica neue', helvetica, sans-serif;
+}
