--- a/assets/sass/base/_skeleton.scss
+++ b/assets/sass/base/_skeleton.scss
@@ -17,19 +17,18 @@
 }
 
 body {
-  font-family: $font-pri;
-  line-height: $line-height;
-  color: $base;
+  font-family: helvetica, arial, sans-serif;
+  line-height: 1.45;
 }
 
 header, nav, article, section, aside, footer {
-  margin-bottom: $gutter * 2;
+  margin-bottom: 4em;
 }
 
 hr {
-  margin-top: $gutter * 2;
-  margin-bottom: $gutter * 2;
-  border-top-color: $neutral-3;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  border-top-color: #ccc;
 }
 
 //////////////////////////////
@@ -45,11 +44,11 @@ h1, h2, h3, h4, h5, h6 {
 //////////////////////////////
 ul, ol {
   list-style-position: inside;
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
 }
 
 ul ol, ul ul, ol ol, ol ul {
-  margin-left: $gutter;
+  margin-left: 2em;
 }
 
 ul ol,
@@ -62,7 +61,7 @@ li {
 }
 
 dl {
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
 }
 
 dt {
@@ -78,7 +77,7 @@ dd {
 // # text
 //////////////////////////////
 p {
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
 }
 
 strong, b {
@@ -106,7 +105,7 @@ sub {
 }
 
 small {
-  font-size: $font-size--s;
+  font-size: 0.875em;
 }
 
 mark {
@@ -115,7 +114,7 @@ mark {
 }
 
 blockquote {
-  margin-bottom: $gutter;
+  margin-bottom: 2m;
 
   &:before { content: "\201C"; }
   &:after  { content: "\201D"; }
@@ -131,14 +130,14 @@ code {
 // # link
 //////////////////////////////
 a {
-  border-bottom: 1px solid $base;
+  border-bottom: 1px solid;
   color: inherit;
   text-decoration: none;
 
   &:hover,
   &:focus {
-    color: $neutral-2;
-    border-bottom-color: $neutral-2;
+    color: #999;
+    border-bottom-color: #999;
   }
 }
 
@@ -148,13 +147,13 @@ a {
 figure, picture, img {
   display: block;
   width: 100%;
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
 }
 
 figcaption {
   margin-top: -0.25em;
-  margin-right: $gutter;
-  font-size: $font-size--s;
+  margin-right: 2m;
+  font-size: 0.875em;
 }
 
 //////////////////////////////
@@ -163,11 +162,11 @@ figcaption {
 table {
   table-layout: fixed;
   width: 100%;
-  margin-bottom: $gutter;
-  border-top: 1px solid $neutral-3;
-  border-right: 1px solid $neutral-3;
-  border-bottom: 1px solid $neutral-3;
-  border-left: 1px solid $neutral-3;
+  margin-bottom: 2em;
+  border-top: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
   text-align: left;
 }
 
@@ -182,10 +181,10 @@ th, td {
   padding-right: 0.5em;
   padding-bottom: 0.25em;
   padding-left: 0.5em;
-  border-top: 1px solid $neutral-3;
-  border-right: 1px solid $neutral-3;
-  border-bottom: 1px solid $neutral-3;
-  border-left: 1px solid $neutral-3;
+  border-top: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
 }
 
 //////////////////////////////
@@ -193,11 +192,11 @@ th, td {
 //////////////////////////////
 form,
 fieldset {
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
 }
 
 legend {
-  margin-bottom: $gutter;
+  margin-bottom: 2em;
   font-weight: bold;
 }
 
@@ -206,10 +205,10 @@ label {
 }
 
 textarea, select, input {
-  border-top: 1px solid $neutral-3;
-  border-right: 1px solid $neutral-3;
-  border-bottom: 1px solid $neutral-3;
-  border-left: 1px solid $neutral-3;
+  border-top: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
   font-family: inherit;
   line-height: 1.4;
 }
@@ -249,7 +248,7 @@ $form_placeholder_prefixes: (
 @each $prefix in $form_placeholder_prefixes {
   input[placeholder]#{$prefix},
   textarea[placeholder]#{$prefix} {
-    color: $neutral-2;
+    color: #999;
   }
 }
 
@@ -268,10 +267,10 @@ input {
     padding-right: 0.25em;
     padding-bottom: 0.25em;
     padding-left: 0.25em;
-    border-top: 1px solid $neutral-3;
-    border-right: 1px solid $neutral-3;
-    border-bottom: 1px solid $neutral-3;
-    border-left: 1px solid $neutral-3;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
 
     &::before {
       content: "";
@@ -282,7 +281,7 @@ input {
 
     &:checked {
       &::before {
-        background: $base;
+        background: #000;
       }
     }
   }
