--- a/assets/sass/element/_whirligig.scss
+++ b/assets/sass/element/_whirligig.scss
@@ -5,6 +5,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
 .whirligig {
   width: 39px;
   height: 39px;
@@ -16,7 +17,8 @@
 .whirligig__side {
   width: 1 / 3 * 100%;
   height: 1 / 3 * 100%;
-  background-color: $base;
+  background-color: #000;
+  // background-color: $base;
   float: left;
   animation: gridScaleDelay 1.3s infinite ease-in-out;
 
