--- a/assets/sass/base/_text-align.scss
+++ b/assets/sass/base/_text-align.scss
@@ -8,7 +8,7 @@
   'ta-center',
   'ta-right',
 ), (
-  (text-align: left),
-  (text-align: center),
-  (text-align: right),
+  ('text-align': left),
+  ('text-align': center),
+  ('text-align': right),
 ));
