--- a/assets/sass/base/_text-decoration.scss
+++ b/assets/sass/base/_text-decoration.scss
@@ -8,7 +8,7 @@
   'td-underline',
   'td-none',
 ), (
-  (text-decoration: strike),
-  (text-decoration: underline),
-  (text-decoration: none),
+  ('text-decoration': strike),
+  ('text-decoration': underline),
+  ('text-decoration': none),
 ));
