--- a/assets/sass/base/_text-transform.scss
+++ b/assets/sass/base/_text-transform.scss
@@ -9,8 +9,8 @@
   'tt-cap',
   'tt-none',
 ), (
-  (text-transform: uppercase),
-  (text-transform: lowercase),
-  (text-transform: capitalize),
-  (text-transform: none),
+  ('text-transform': uppercase),
+  ('text-transform': lowercase),
+  ('text-transform': capitalize),
+  ('text-transform': none),
 ));
