--- a/assets/sass/base/_vertical-align.scss
+++ b/assets/sass/base/_vertical-align.scss
@@ -13,12 +13,12 @@
   'va-super',
   'va-baseline',
 ), (
-  (vertical-align: top),
-  (vertical-align: middle),
-  (vertical-align: bottom),
-  (vertical-align: text-top),
-  (vertical-align: text-bottom),
-  (vertical-align: sub),
-  (vertical-align: super),
-  (vertical-align: baseline),
+  ('vertical-align': top),
+  ('vertical-align': middle),
+  ('vertical-align': bottom),
+  ('vertical-align': text-top),
+  ('vertical-align': text-bottom),
+  ('vertical-align': sub),
+  ('vertical-align': super),
+  ('vertical-align': baseline),
 ));
