--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -36,6 +36,13 @@
 @import "base/text-decoration";
 @import "base/text-align";
 
+//////////////////////////////
+// # theme-ing
+//////////////////////////////
+@import "base/colors";
+@import "base/background-color";
+@import "base/border";
+
 
 // # element
 ////////////////////////////////////////////////////////////////////////////////////////////////////
