--- a/assets/sass/base/_font-style.scss
+++ b/assets/sass/base/_font-style.scss
@@ -7,6 +7,6 @@
   'fs-normal',
   'fs-italic',
 ), (
-  (font-style: normal),
-  (font-style: italic),
+  ('font-style': normal),
+  ('font-style': italic),
 ));
