--- a/assets/sass/base/_measure.scss
+++ b/assets/sass/base/_measure.scss
@@ -8,7 +8,7 @@
   'measure-narrow',
   'measure-wide',
 ), (
-  (max-width: 30em),
-  (max-width: 20em),
-  (max-width: 34em),
+  ('max-width': 30em),
+  ('max-width': 20em),
+  ('max-width': 34em),
 ));
