--- a/assets/sass/base/_type-scale.scss
+++ b/assets/sass/base/_type-scale.scss
@@ -17,7 +17,7 @@
   $result: ();
   @each $value in $values {
     $result: append($result, (
-      font-size: $value,
+      'font-size': $value,
     ), 'comma');
   }
   @return $result;
