[1.1.25] add 'display' module to layout utilities

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -18,7 +18,8 @@
 //////////////////////////////
 // # layout
 //////////////////////////////
-@import "base/grid"; 
+@import "base/grid";
+@import "base/display";
 @import "base/spacing";
 @import "base/measure";
 @import "base/vertical-align";
@@ -71,4 +72,3 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
